--- a/app/src/main/res/layout/activity_veterinary_diary.xml
+++ b/app/src/main/res/layout/activity_veterinary_diary.xml
@@ -4,6 +4,245 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activity.write.VeterinaryDiary">
+    tools:context=".activity.write.VeterinaryDiaryActivity">
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        >
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+            <TextView
+                android:id="@+id/tv_title"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:layout_constraintTop_toTopOf="parent"
+                android:textSize="25sp"
+                android:text="병원 기록"
+                android:gravity="center"
+                android:layout_marginTop="20dp"
+                />
+            <TextView
+                android:id="@+id/tv_date"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintTop_toBottomOf="@+id/tv_title"
+                app:layout_constraintLeft_toLeftOf="parent"
+                android:layout_marginVertical="10dp"
+                android:layout_marginHorizontal="20dp"
+                android:text="날짜"
+                />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="horizontal"
+                >
+
+                <EditText
+                    android:id="@+id/et_date"
+                    app:layout_constraintTop_toBottomOf="@+id/tv_date"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:minWidth="150dp"
+                    android:layout_marginHorizontal="20dp"
+                    android:enabled="false"
+                    />
+                <androidx.constraintlayout.utils.widget.ImageFilterButton
+                    android:id="@+id/btn_calendar"
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
+                    android:src="@drawable/ic_calendar"
+                    app:layout_constraintLeft_toRightOf="@+id/et_date"
+                    app:layout_constraintBottom_toBottomOf="@+id/et_date"
+                    android:scaleType="centerInside"
+                    android:layout_marginVertical="10dp"
+                    />
+            </LinearLayout>
+
+            <TextView
+                android:id="@+id/tv_veterinary"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:layout_constraintLeft_toLeftOf="parent"
+                android:layout_marginTop="20dp"
+                android:layout_marginHorizontal="20dp"
+                android:text="병원명"
+                app:layout_constraintTop_toBottomOf="@id/et_date"
+                />
+            <EditText
+                android:id="@+id/et_veterinary"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintTop_toBottomOf="@+id/tv_veterinary"
+                android:minWidth="300dp"
+                app:layout_constraintLeft_toLeftOf="parent"
+                android:layout_marginHorizontal="20dp"
+                android:layout_marginVertical="5dp"
+                />
+
+            <TextView
+                android:id="@+id/tv_vet_name"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:layout_constraintLeft_toLeftOf="parent"
+                android:layout_marginTop="20dp"
+                android:layout_marginHorizontal="20dp"
+                android:text="진료자"
+                app:layout_constraintTop_toBottomOf="@id/et_veterinary"
+                />
+            <EditText
+                android:id="@+id/et_vet"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintTop_toBottomOf="@+id/tv_vet_name"
+                android:minWidth="150dp"
+                app:layout_constraintLeft_toLeftOf="parent"
+                android:layout_marginHorizontal="20dp"
+                />
+            <TextView
+                android:id="@+id/tv_weight"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:layout_marginHorizontal="20dp"
+                android:text="몸무게"
+                />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="horizontal">
+                <EditText
+                    android:id="@+id/et_wieght"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:minWidth="100dp"
+                    android:inputType="numberDecimal"
+                    android:layout_marginLeft="20dp"
+                    />
+                <TextView
+                    android:id="@+id/tv_kg"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="KG"
+                    android:textSize="20sp"
+                    android:layout_marginLeft="10dp"
+                    />
+            </LinearLayout>
+
+            <TextView
+                android:id="@+id/tv_medical_records"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:layout_constraintLeft_toLeftOf="parent"
+                android:layout_marginTop="20dp"
+                android:layout_marginHorizontal="20dp"
+                android:text="진료내용"
+                app:layout_constraintTop_toBottomOf="@id/et_wieght"
+                />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="horizontal">
+                <EditText
+                    android:id="@+id/et_medical_records"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="20dp"
+                    android:inputType="textMultiLine"
+                    android:textSize="13sp"
+                    android:width="330dp"
+                    android:hint="진료내역, 결과를 입력해주세요."
+                    />
+                <androidx.constraintlayout.utils.widget.ImageFilterButton
+                    android:id="@+id/btn_add_img"
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
+                    android:scaleType="centerCrop"
+                    android:src="@drawable/ic_picture"
+                    android:layout_marginHorizontal="5dp"
+                    android:contentDescription="사진 첨부"
+                    />
+            </LinearLayout>
+
+            <TextView
+                android:id="@+id/tv_medicine"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:layout_constraintLeft_toLeftOf="parent"
+                android:layout_marginTop="20dp"
+                android:layout_marginHorizontal="20dp"
+                android:text="처방약물"
+                app:layout_constraintTop_toBottomOf="@id/et_medical_records"
+                />
+            <LinearLayout
+                android:id="@+id/grp_medicine"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:layout_constraintTop_toBottomOf="@+id/tv_medicine"
+                android:orientation="horizontal"
+                android:paddingHorizontal="20dp"
+                >
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    >
+                    <EditText
+                        android:id="@+id/m_nm"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:minWidth="170dp"
+                        android:textSize="13sp"
+                        android:hint="약품 명:Almagel"
+                        />
+                    <EditText
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:minWidth="50dp"
+                        android:textSize="13sp"
+                        android:hint="용량"
+                        android:inputType="numberDecimal"
+                        />
+                    <Spinner
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        />
+                    <de.hdodenhof.circleimageview.CircleImageView
+                        android:id="@+id/btn_add_medicine"
+                        android:layout_width="30dp"
+                        android:layout_height="30dp"
+                        android:layout_marginTop="5dp"
+                        android:src="@drawable/pet_add_btn"
+                        />
+                </LinearLayout>
+            </LinearLayout>
+            <TextView
+                android:id="@+id/tv_etc_memo"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:layout_constraintLeft_toLeftOf="parent"
+                android:layout_marginTop="20dp"
+                android:layout_marginHorizontal="20dp"
+                android:text="기타 메모"
+                app:layout_constraintTop_toBottomOf="@id/grp_medicine"
+                />
+            <EditText
+                android:id="@+id/et_etc_memo"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="20dp"
+                app:layout_constraintTop_toBottomOf="@+id/tv_etc_memo"
+                android:inputType="textMultiLine"
+                />
+        </LinearLayout>
+
+    </ScrollView>
+
+
+
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
