--- a/app/src/main/res/layout/fragment_main_home.xml
+++ b/app/src/main/res/layout/fragment_main_home.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".MainHomeFragment">
+    tools:context=".activity.main.fragment.MainHomeFragment">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -16,6 +16,7 @@
             android:layout_height="100dp"
             android:layout_marginTop="50dp"
             app:layout_constraintTop_toTopOf="parent"
+
             />
 
         <com.prolificinteractive.materialcalendarview.MaterialCalendarView
@@ -24,11 +25,12 @@
             android:layout_height="wrap_content"
             app:layout_constraintBottom_toBottomOf="parent"
             app:mcv_showOtherDates="all"
-            app:mcv_selectionColor="@color/gray"
+            android:theme="@style/materialCalendarCustom"
+            app:mcv_selectionMode="single"
+            app:mcv_firstDayOfWeek="sunday"
+            app:layout_constraintTop_toBottomOf="@+id/frg_petlist"
+            android:minHeight="598dp"
             />
-
-
-
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 
