--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,8 @@
     <color name="listview_title">#00BCA1</color>
     <color name="invisible">#00FFFFFF</color>
     <color name="gray">#B2B3B4B4</color>
+    <color name="pastelGreen">#BDF878</color>
+    <color name="red">#FF0000</color>
+    <color name="app_main">#63F6F6A6</color>
+    <color name="circle_border">#FCB388FF</color>
 </resources>
