--- a/app/src/main/res/layout/activity_iveterinary_diary.xml
+++ b/app/src/main/res/layout/activity_iveterinary_diary.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activity.write.VeterinaryDiaryActivity">
+    tools:context=".activity.write.WVeterinaryDiaryActivity">
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -20,7 +20,7 @@
                 android:layout_height="wrap_content"
                 app:layout_constraintTop_toTopOf="parent"
                 android:textSize="25sp"
-                android:text="병원 기록"
+                android:text="@string/veterinary_report"
                 android:gravity="center"
                 android:layout_marginTop="20dp"
                 />
@@ -32,7 +32,7 @@
                 app:layout_constraintLeft_toLeftOf="parent"
                 android:layout_marginVertical="10dp"
                 android:layout_marginHorizontal="20dp"
-                android:text="날짜"
+                android:text="@string/date"
                 />
             <LinearLayout
                 android:layout_width="match_parent"
@@ -49,6 +49,7 @@
                     android:minWidth="150dp"
                     android:layout_marginHorizontal="20dp"
                     android:enabled="false"
+                    android:textColor="@color/black"
                     />
                 <androidx.constraintlayout.utils.widget.ImageFilterButton
                     android:id="@+id/btn_calendar"
@@ -69,7 +70,7 @@
                 app:layout_constraintLeft_toLeftOf="parent"
                 android:layout_marginTop="20dp"
                 android:layout_marginHorizontal="20dp"
-                android:text="병원명"
+                android:text="@string/veterinary_name"
                 app:layout_constraintTop_toBottomOf="@id/et_date"
                 />
             <EditText
@@ -108,7 +109,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
                 android:layout_marginHorizontal="20dp"
-                android:text="몸무게"
+                android:text="@string/weight"
                 />
             <LinearLayout
                 android:layout_width="match_parent"
@@ -120,15 +121,15 @@
                     android:layout_height="wrap_content"
                     android:minWidth="100dp"
                     android:inputType="numberDecimal"
-                    android:layout_marginLeft="20dp"
+                    android:layout_marginStart="20dp"
                     />
                 <TextView
                     android:id="@+id/tv_kg"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="KG"
+                    android:text="@string/kg"
                     android:textSize="20sp"
-                    android:layout_marginLeft="10dp"
+                    android:layout_marginStart="10dp"
                     />
             </LinearLayout>
 
@@ -139,22 +140,24 @@
                 app:layout_constraintLeft_toLeftOf="parent"
                 android:layout_marginTop="20dp"
                 android:layout_marginHorizontal="20dp"
-                android:text="진료내용"
+                android:text="@string/treat_contents"
                 app:layout_constraintTop_toBottomOf="@id/et_wieght"
                 />
             <LinearLayout
+                android:id="@+id/records_layout"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:orientation="horizontal">
+                android:orientation="horizontal"
+                >
                 <EditText
                     android:id="@+id/et_medical_records"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="20dp"
+                    android:layout_marginStart="20dp"
                     android:inputType="textMultiLine"
                     android:textSize="13sp"
                     android:width="330dp"
-                    android:hint="진료내역, 결과를 입력해주세요."
+                    android:hint="@string/treat_result_contents"
                     />
                 <androidx.constraintlayout.utils.widget.ImageFilterButton
                     android:id="@+id/btn_add_img"
@@ -163,9 +166,21 @@
                     android:scaleType="centerCrop"
                     android:src="@drawable/ic_picture"
                     android:layout_marginHorizontal="5dp"
-                    android:contentDescription="사진 첨부"
+                    android:contentDescription="@string/add_photos"
                     />
             </LinearLayout>
+            <com.google.android.flexbox.FlexboxLayout
+                android:id="@+id/vet_flex_layout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:maxLine="1"
+                app:justifyContent="flex_start"
+                app:layout_constraintBottom_toTopOf="@+id/records_layout"
+                app:layout_constraintTop_toBottomOf="@+id/tv_medicine"
+                app:flexWrap="wrap"
+                android:paddingHorizontal="20dp"
+                >
+            </com.google.android.flexbox.FlexboxLayout>
 
             <TextView
                 android:id="@+id/tv_medicine"
@@ -174,7 +189,7 @@
                 app:layout_constraintLeft_toLeftOf="parent"
                 android:layout_marginTop="20dp"
                 android:layout_marginHorizontal="20dp"
-                android:text="처방약물"
+                android:text="@string/prescription_drug"
                 app:layout_constraintTop_toBottomOf="@id/et_medical_records"
                 />
             <LinearLayout
@@ -195,14 +210,14 @@
                         android:layout_height="wrap_content"
                         android:minWidth="170dp"
                         android:textSize="13sp"
-                        android:hint="약품 명:Almagel"
+                        android:hint="@string/drug_name"
                         />
                     <EditText
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:minWidth="50dp"
                         android:textSize="13sp"
-                        android:hint="용량"
+                        android:hint="@string/volume"
                         android:inputType="numberDecimal"
                         />
                     <Spinner
@@ -237,8 +252,15 @@
                 app:layout_constraintTop_toBottomOf="@+id/tv_etc_memo"
                 android:inputType="textMultiLine"
                 />
+            <Button
+                android:id="@+id/btn_veterinary_save"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/save"
+                android:layout_gravity="right"
+                android:layout_marginHorizontal="30dp"
+                />
         </LinearLayout>
-
     </ScrollView>
 
 
