--- a/app/src/main/res/layout/activity_iveterinary_diary.xml
+++ b/app/src/main/res/layout/activity_iveterinary_diary.xml
@@ -5,14 +5,27 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".activity.write.WVeterinaryDiaryActivity">
+    <TextView
+        android:id="@+id/empty_data"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/emptyMemo"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        android:visibility="invisible"
+        />
     <ScrollView
+        android:visibility="invisible"
+        android:id="@+id/layout_main"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
         >
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:orientation="vertical">
             <TextView
                 android:id="@+id/tv_title"
@@ -40,7 +53,7 @@
                 android:orientation="horizontal"
                 >
 
-                <EditText
+                <TextView
                     android:id="@+id/et_date"
                     app:layout_constraintTop_toBottomOf="@+id/tv_date"
                     app:layout_constraintLeft_toLeftOf="parent"
@@ -51,16 +64,16 @@
                     android:enabled="false"
                     android:textColor="@color/black"
                     />
-                <androidx.constraintlayout.utils.widget.ImageFilterButton
-                    android:id="@+id/btn_calendar"
-                    android:layout_width="30dp"
-                    android:layout_height="30dp"
-                    android:src="@drawable/ic_calendar"
-                    app:layout_constraintLeft_toRightOf="@+id/et_date"
-                    app:layout_constraintBottom_toBottomOf="@+id/et_date"
-                    android:scaleType="centerInside"
-                    android:layout_marginVertical="10dp"
-                    />
+<!--                <androidx.constraintlayout.utils.widget.ImageFilterButton-->
+<!--                    android:id="@+id/btn_calendar"-->
+<!--                    android:layout_width="30dp"-->
+<!--                    android:layout_height="30dp"-->
+<!--                    android:src="@drawable/ic_calendar"-->
+<!--                    app:layout_constraintLeft_toRightOf="@+id/et_date"-->
+<!--                    app:layout_constraintBottom_toBottomOf="@+id/et_date"-->
+<!--                    android:scaleType="centerInside"-->
+<!--                    android:layout_marginVertical="10dp"-->
+<!--                    />-->
             </LinearLayout>
 
             <TextView
@@ -73,7 +86,7 @@
                 android:text="@string/veterinary_name"
                 app:layout_constraintTop_toBottomOf="@id/et_date"
                 />
-            <EditText
+            <TextView
                 android:id="@+id/et_veterinary"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -94,7 +107,7 @@
                 android:text="진료자"
                 app:layout_constraintTop_toBottomOf="@id/et_veterinary"
                 />
-            <EditText
+            <TextView
                 android:id="@+id/et_vet"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -115,7 +128,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:orientation="horizontal">
-                <EditText
+                <TextView
                     android:id="@+id/et_wieght"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -149,7 +162,7 @@
                 android:layout_height="match_parent"
                 android:orientation="horizontal"
                 >
-                <EditText
+                <TextView
                     android:id="@+id/et_medical_records"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -159,15 +172,15 @@
                     android:width="330dp"
                     android:hint="@string/treat_result_contents"
                     />
-                <androidx.constraintlayout.utils.widget.ImageFilterButton
-                    android:id="@+id/btn_add_img"
-                    android:layout_width="30dp"
-                    android:layout_height="30dp"
-                    android:scaleType="centerCrop"
-                    android:src="@drawable/ic_picture"
-                    android:layout_marginHorizontal="5dp"
-                    android:contentDescription="@string/add_photos"
-                    />
+<!--                <androidx.constraintlayout.utils.widget.ImageFilterButton-->
+<!--                    android:id="@+id/btn_add_img"-->
+<!--                    android:layout_width="30dp"-->
+<!--                    android:layout_height="30dp"-->
+<!--                    android:scaleType="centerCrop"-->
+<!--                    android:src="@drawable/ic_picture"-->
+<!--                    android:layout_marginHorizontal="5dp"-->
+<!--                    android:contentDescription="@string/add_photos"-->
+<!--                    />-->
             </LinearLayout>
             <com.google.android.flexbox.FlexboxLayout
                 android:id="@+id/vet_flex_layout"
@@ -197,14 +210,16 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 app:layout_constraintTop_toBottomOf="@+id/tv_medicine"
-                android:orientation="horizontal"
+                android:orientation="vertical"
                 android:paddingHorizontal="20dp"
                 >
                 <LinearLayout
+                    android:id="@+id/list_medicine"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:orientation="horizontal"
                     >
-                    <EditText
+                    <TextView
                         android:id="@+id/m_nm"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
@@ -212,25 +227,13 @@
                         android:textSize="13sp"
                         android:hint="@string/drug_name"
                         />
-                    <EditText
+                    <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:minWidth="50dp"
                         android:textSize="13sp"
                         android:hint="@string/volume"
                         android:inputType="numberDecimal"
-                        />
-                    <Spinner
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center"
-                        />
-                    <de.hdodenhof.circleimageview.CircleImageView
-                        android:id="@+id/btn_add_medicine"
-                        android:layout_width="30dp"
-                        android:layout_height="30dp"
-                        android:layout_marginTop="5dp"
-                        android:src="@drawable/pet_add_btn"
                         />
                 </LinearLayout>
             </LinearLayout>
@@ -244,22 +247,21 @@
                 android:text="기타 메모"
                 app:layout_constraintTop_toBottomOf="@id/grp_medicine"
                 />
-            <EditText
+            <TextView
                 android:id="@+id/et_etc_memo"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="20dp"
                 app:layout_constraintTop_toBottomOf="@+id/tv_etc_memo"
-                android:inputType="textMultiLine"
                 />
             <Button
                 android:id="@+id/btn_veterinary_save"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/save"
+                android:text="@string/modifie"
                 android:layout_gravity="right"
                 android:layout_marginHorizontal="30dp"
-                />
+                 />
         </LinearLayout>
     </ScrollView>
 
