--- a/app/src/main/res/layout/activity_iveterinary_diary.xml
+++ b/app/src/main/res/layout/activity_iveterinary_diary.xml
@@ -17,13 +17,14 @@
         android:visibility="invisible"
         />
     <ScrollView
-        android:visibility="invisible"
-        android:id="@+id/layout_main"
+        android:visibility="visible"
+        android:id="@+id/layout_scroll"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
         >
         <LinearLayout
+            android:id="@+id/layout_main"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
@@ -52,7 +53,6 @@
                 android:layout_height="match_parent"
                 android:orientation="horizontal"
                 >
-
                 <TextView
                     android:id="@+id/et_date"
                     app:layout_constraintTop_toBottomOf="@+id/tv_date"
@@ -64,16 +64,6 @@
                     android:enabled="false"
                     android:textColor="@color/black"
                     />
-<!--                <androidx.constraintlayout.utils.widget.ImageFilterButton-->
-<!--                    android:id="@+id/btn_calendar"-->
-<!--                    android:layout_width="30dp"-->
-<!--                    android:layout_height="30dp"-->
-<!--                    android:src="@drawable/ic_calendar"-->
-<!--                    app:layout_constraintLeft_toRightOf="@+id/et_date"-->
-<!--                    app:layout_constraintBottom_toBottomOf="@+id/et_date"-->
-<!--                    android:scaleType="centerInside"-->
-<!--                    android:layout_marginVertical="10dp"-->
-<!--                    />-->
             </LinearLayout>
 
             <TextView
@@ -104,7 +94,7 @@
                 app:layout_constraintLeft_toLeftOf="parent"
                 android:layout_marginTop="20dp"
                 android:layout_marginHorizontal="20dp"
-                android:text="진료자"
+                android:text="@string/vet_name"
                 app:layout_constraintTop_toBottomOf="@id/et_veterinary"
                 />
             <TextView
@@ -133,7 +123,6 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:minWidth="100dp"
-                    android:inputType="numberDecimal"
                     android:layout_marginStart="20dp"
                     />
                 <TextView
@@ -167,20 +156,9 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="20dp"
-                    android:inputType="textMultiLine"
                     android:textSize="13sp"
                     android:width="330dp"
-                    android:hint="@string/treat_result_contents"
                     />
-<!--                <androidx.constraintlayout.utils.widget.ImageFilterButton-->
-<!--                    android:id="@+id/btn_add_img"-->
-<!--                    android:layout_width="30dp"-->
-<!--                    android:layout_height="30dp"-->
-<!--                    android:scaleType="centerCrop"-->
-<!--                    android:src="@drawable/ic_picture"-->
-<!--                    android:layout_marginHorizontal="5dp"-->
-<!--                    android:contentDescription="@string/add_photos"-->
-<!--                    />-->
             </LinearLayout>
             <com.google.android.flexbox.FlexboxLayout
                 android:id="@+id/vet_flex_layout"
@@ -219,22 +197,6 @@
                     android:layout_height="wrap_content"
                     android:orientation="horizontal"
                     >
-                    <TextView
-                        android:id="@+id/m_nm"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:minWidth="170dp"
-                        android:textSize="13sp"
-                        android:hint="@string/drug_name"
-                        />
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:minWidth="50dp"
-                        android:textSize="13sp"
-                        android:hint="@string/volume"
-                        android:inputType="numberDecimal"
-                        />
                 </LinearLayout>
             </LinearLayout>
             <TextView
@@ -244,7 +206,7 @@
                 app:layout_constraintLeft_toLeftOf="parent"
                 android:layout_marginTop="20dp"
                 android:layout_marginHorizontal="20dp"
-                android:text="기타 메모"
+                android:text="@string/etc_memo"
                 app:layout_constraintTop_toBottomOf="@id/grp_medicine"
                 />
             <TextView
@@ -254,19 +216,8 @@
                 android:layout_marginHorizontal="20dp"
                 app:layout_constraintTop_toBottomOf="@+id/tv_etc_memo"
                 />
-            <Button
-                android:id="@+id/btn_veterinary_save"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/modifie"
-                android:layout_gravity="right"
-                android:layout_marginHorizontal="30dp"
-                 />
         </LinearLayout>
     </ScrollView>
-
-
-
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
